[package]
name = "tacos_test_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
env_logger = "0.11.8"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full", "server"] }
hyper-util = { version = "0.1.19", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
toml = "0.9.11"
uuid = { version = "1.19.0", features = ["v4"] }
